urls and layout issues fixed

--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -1,4 +1,8 @@
-* { box-sizing: border-box; }
+* {
+	box-sizing: border-box;
+
+	@include transition(all 0.4s ease);
+}
 
 b, strong { font-weight: bold; }
 
