--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -26,8 +26,6 @@ header {
 			position: relative;
 			z-index: 100;
 
-			float: left;
-
 			margin: 28px 0 0 0;
 		}
 
@@ -128,7 +126,11 @@ header {
 
 				li {
 					display: table;
-					margin: 0 25px;
+					margin: 0 23px;
+
+					@media (max-width: 1170px) {
+						margin: 0 10px;
+					}
 
 					@media (max-width: 1050px) {
 						width: 100%;
@@ -184,8 +186,6 @@ header {
 
 		width: 100%;
 		height: 550px;
-
-		margin: 105px 0 0 0;
 
 		box-shadow: 0px 5px 16px 0px rgba( 0, 0, 0, 0.3 );
 
